codepkg/objects/ServiceLocation__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceLocationEndDate__c</fullName>
        <description>End Date of the Service Location.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End Date of the Service Location.</inlineHelpText>
        <label>Service Location End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceLocationStartDate__c</fullName>
        <description>Start Date of Service Location.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date of Service Location.</inlineHelpText>
        <label>Service Location Start Date</label>
        <type>Date</type>
    </fields>
    <label>Service Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ServiceLocationStartDate__c</columns>
        <columns>ServiceLocationEndDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Location Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>